--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ jobs:
         - CXX_COMPILER='clang++-3.6'
         - C_COMPILER='clang-3.6'
         - Fortran_COMPILER='gfortran'
-        - BUILD_TYPE='release'
+        - BUILD_TYPE='Release'
       install:
       - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
       - bash miniconda.sh -b -p $HOME/miniconda
@@ -56,7 +56,6 @@ jobs:
           -DPYTHON_EXECUTABLE="${HOME}/miniconda/envs/helpme/bin/python"
       - cd build
       - make -j 2
-      - ls -R
       script: ctest -VV -j 2
     - stage: build and test
       os: linux
@@ -67,6 +66,7 @@ jobs:
           - llvm-toolchain-precise-3.6
           - ubuntu-toolchain-r-test
           packages:
+          - lcov
           - liblapack-dev
           - libfftw3-dev
           - g++-4.9
@@ -78,7 +78,15 @@ jobs:
         - CXX_COMPILER='g++-4.9'
         - C_COMPILER='gcc-4.9'
         - Fortran_COMPILER='gfortran-4.9'
-        - BUILD_TYPE='release'
+        - BUILD_TYPE='Debug'
+      after_success:
+          # Creating report
+        - cd ${TRAVIS_BUILD_DIR}
+        - lcov --directory . --capture --output-file coverage.info # capture coverage info
+        - lcov --remove coverage.info '/usr/*' --remove coverage.info '*single_header*' --remove coverage.info '*single_include*'  --output-file coverage.info # filter out system
+        - lcov --list coverage.info #debug info
+        # Uploading report to CodeCov
+        - bash <(curl -s https://codecov.io/bash) || echo "Codecov did not collect coverage reports"
       install:
       - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
       - bash miniconda.sh -b -p $HOME/miniconda
@@ -104,11 +112,11 @@ jobs:
       - >
           cmake -Bbuild -H.
           -DCMAKE_BUILD_TYPE=${BUILD_TYPE}
+          -DENABLE_CODE_COVERAGE=ON
           -DCMAKE_CXX_COMPILER=${CXX_COMPILER}
           -DCMAKE_C_COMPILER=${C_COMPILER}
           -DCMAKE_Fortran_COMPILER=${Fortran_COMPILER}
           -DPYTHON_EXECUTABLE="${HOME}/miniconda/envs/helpme/bin/python"
       - cd build
       - make -j 2
-      - ls -R
       script: ctest -VV -j 2
