Improve MPI testing

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ jobs:
           - libfftw3-dev
           - clang-3.6
           - gfortran
+          - mpich2
       env:
         - NAME='clang'
         - PYTHON_VER='3.6'
@@ -66,6 +67,7 @@ jobs:
           - llvm-toolchain-precise-3.6
           - ubuntu-toolchain-r-test
           packages:
+          - mpich2
           - lcov
           - liblapack-dev
           - libfftw3-dev
