--- a/.travis.yml
+++ b/.travis.yml
@@ -44,6 +44,9 @@ jobs:
       - export CXX=${CXX_COMPILER}
       - export CC=${C_COMPILER}
       - export FC=${Fortran_COMPILER}
+      - export MPI_CXX=${CXX}
+      - export MPI_CC=${CC}
+      - export MPI_F90=${FC}
       - export CTEST_OUTPUT_ON_FAILURE=1
       - ${CXX_COMPILER} --version
       - ${Fortran_COMPILER} --version
@@ -51,9 +54,9 @@ jobs:
       - >
           cmake -Bbuild -H.
           -DCMAKE_BUILD_TYPE=${BUILD_TYPE}
-          -DCMAKE_CXX_COMPILER=${CXX_COMPILER}
-          -DCMAKE_C_COMPILER=${C_COMPILER}
-          -DCMAKE_Fortran_COMPILER=${Fortran_COMPILER}
+          -DCMAKE_CXX_COMPILER=mpicxx
+          -DCMAKE_C_COMPILER=mpicc
+          -DCMAKE_Fortran_COMPILER=mpif90
           -DPYTHON_EXECUTABLE="${HOME}/miniconda/envs/helpme/bin/python"
       - cd build
       - make -j 2
@@ -107,6 +110,9 @@ jobs:
       - export CXX=${CXX_COMPILER}
       - export CC=${C_COMPILER}
       - export FC=${Fortran_COMPILER}
+      - export MPI_CXX=${CXX}
+      - export MPI_CC=${CC}
+      - export MPI_F90=${FC}
       - export CTEST_OUTPUT_ON_FAILURE=1
       - ${CXX_COMPILER} --version
       - ${Fortran_COMPILER} --version
@@ -115,9 +121,9 @@ jobs:
           cmake -Bbuild -H.
           -DCMAKE_BUILD_TYPE=${BUILD_TYPE}
           -DENABLE_CODE_COVERAGE=ON
-          -DCMAKE_CXX_COMPILER=${CXX_COMPILER}
-          -DCMAKE_C_COMPILER=${C_COMPILER}
-          -DCMAKE_Fortran_COMPILER=${Fortran_COMPILER}
+          -DCMAKE_CXX_COMPILER=mpicxx
+          -DCMAKE_C_COMPILER=mpicc
+          -DCMAKE_Fortran_COMPILER=mpif90
           -DPYTHON_EXECUTABLE="${HOME}/miniconda/envs/helpme/bin/python"
       - cd build
       - make -j 2
