--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,20 @@
-language: cpp
+language: python
 sudo: false
 
 jobs:
   include:
+    #
+    # Format check
+    #
     - stage: format check
       script: ./tools/check_style.sh
+
+    #
+    # Serial Py36 / Clang36 / Release
+    #
     - stage: build and test
+      python: "3.6"
       os: linux
-#      compiler: clang
       addons:
         apt:
           sources:
@@ -18,36 +25,17 @@ jobs:
           - libfftw3-dev
           - clang-3.6
           - gfortran
-          - mpich
-          - mpi-default-dev
       env:
         - NAME='clang'
-        - PYTHON_VER='3.6'
         - CXX_COMPILER='/usr/bin/clang++-3.6'
         - C_COMPILER='/usr/bin/clang-3.6'
         - Fortran_COMPILER='/usr/bin/gfortran'
         - BUILD_TYPE='Release'
-      install:
-      - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
-      - bash miniconda.sh -b -p $HOME/miniconda
-      - export PATH="$HOME/miniconda/bin:$PATH"
-      - hash -r
-      - conda config --set always_yes yes --set changeps1 no
-      - conda update -q conda
-      - conda info -a
-      - conda create -q -n helpme python=$PYTHON_VER numpy cmake
-      - source activate helpme
-      - conda list
       before_script:
       - python -V
+      - pip install numpy
       - python -c 'import numpy; print(numpy.version.version)'
       - cd ${TRAVIS_BUILD_DIR}
-      - export CXX=${CXX_COMPILER}
-      - export CC=${C_COMPILER}
-      - export FC=${Fortran_COMPILER}
-      - export MPI_CXX=${CXX}
-      - export MPI_CC=${CC}
-      - export MPI_F90=${FC}
       - export CTEST_OUTPUT_ON_FAILURE=1
       - ${CXX_COMPILER} --version
       - ${Fortran_COMPILER} --version
@@ -55,16 +43,63 @@ jobs:
       - >
           cmake -Bbuild -H.
           -DCMAKE_BUILD_TYPE=${BUILD_TYPE}
-          -DCMAKE_CXX_COMPILER=/usr/bin/mpicxx
-          -DCMAKE_C_COMPILER=/usr/bin/mpicc
-          -DCMAKE_Fortran_COMPILER=/usr/bin/mpif90
-          -DPYTHON_EXECUTABLE="${HOME}/miniconda/envs/helpme/bin/python"
+          -DCMAKE_CXX_COMPILER=${CXX_COMPILER}
+          -DCMAKE_C_COMPILER=${C_COMPILER}
+          -DCMAKE_Fortran_COMPILER=${Fortran_COMPILER}
+          -DPYTHON_EXECUTABLE=`which python`
       - cd build
       - make -j 2
-      script: ctest -VV
+      script: ctest -j 2 -VV
+
+    #
+    # Serial Py35 / GCC49 / Debug
+    #
     - stage: build and test
       os: linux
-#      compiler: clang
+      python: "3.5"
+      addons:
+        apt:
+          sources:
+          - llvm-toolchain-precise-3.6
+          - ubuntu-toolchain-r-test
+          packages:
+          - liblapack-dev
+          - libfftw3-dev
+          - g++-4.9
+          - gcc-4.9
+          - gfortran-4.9
+      env:
+        - NAME='gcc'
+        - CXX_COMPILER='/usr/bin/g++-4.9'
+        - C_COMPILER='/usr/bin/gcc-4.9'
+        - Fortran_COMPILER='/usr/bin/gfortran-4.9'
+        - BUILD_TYPE='Release'
+      before_script:
+      - python -V
+      - pip install numpy
+      - python -c 'import numpy; print(numpy.version.version)'
+      - cd ${TRAVIS_BUILD_DIR}
+      - export CTEST_OUTPUT_ON_FAILURE=1
+      - ${CXX_COMPILER} --version
+      - ${Fortran_COMPILER} --version
+      - ${C_COMPILER} --version
+      - >
+          cmake -Bbuild -H.
+          -DCMAKE_BUILD_TYPE=${BUILD_TYPE}
+          -DCMAKE_CXX_COMPILER=${CXX_COMPILER}
+          -DCMAKE_C_COMPILER=${C_COMPILER}
+          -DCMAKE_Fortran_COMPILER=${Fortran_COMPILER}
+          -DPYTHON_EXECUTABLE=`which python`
+      - cd build
+      - make -j 2
+      script: ctest -j 2 -VV
+
+    #
+    # MPI Py27 / GCC48 / Debug
+    #
+    - stage: build and test
+      os: linux
+      python: "2.7"
       addons:
         apt:
           sources:
@@ -74,47 +109,17 @@ jobs:
           - lcov
           - liblapack-dev
           - libfftw3-dev
-          - g++-4.9
-          - gcc-4.9
-          - gfortran-4.9
-          - mpich
+          - gfortran
+          - mpi-default-bin
           - mpi-default-dev
       env:
         - NAME='gcc'
-        - PYTHON_VER='2.7'
-        - CXX_COMPILER='/usr/bin/g++-4.9'
-        - C_COMPILER='/usr/bin/gcc-4.9'
-        - Fortran_COMPILER='/usr/bin/gfortran-4.9'
         - BUILD_TYPE='Debug'
-      after_success:
-          # Creating report
-        - cd ${TRAVIS_BUILD_DIR}
-        - lcov --directory . --capture --output-file coverage.info # capture coverage info
-        - lcov --remove coverage.info '/usr/*' '*single_include*'  --output-file coverage.info # filter out system
-        - lcov --list coverage.info #debug info
-        # Uploading report to CodeCov
-        - bash <(curl -s https://codecov.io/bash) || echo "Codecov did not collect coverage reports"
-      install:
-      - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
-      - bash miniconda.sh -b -p $HOME/miniconda
-      - export PATH="$HOME/miniconda/bin:$PATH"
-      - hash -r
-      - conda config --set always_yes yes --set changeps1 no
-      - conda update -q conda
-      - conda info -a
-      - conda create -q -n helpme python=$PYTHON_VER numpy cmake
-      - source activate helpme
-      - conda list
       before_script:
       - python -V
+      - pip install numpy
       - python -c 'import numpy; print(numpy.version.version)'
       - cd ${TRAVIS_BUILD_DIR}
-      - export CXX=${CXX_COMPILER}
-      - export CC=${C_COMPILER}
-      - export FC=${Fortran_COMPILER}
-      - export MPI_CXX=${CXX}
-      - export MPI_CC=${CC}
-      - export MPI_F90=${FC}
       - export CTEST_OUTPUT_ON_FAILURE=1
       - ${CXX_COMPILER} --version
       - ${Fortran_COMPILER} --version
@@ -123,10 +128,18 @@ jobs:
           cmake -Bbuild -H.
           -DCMAKE_BUILD_TYPE=${BUILD_TYPE}
           -DENABLE_CODE_COVERAGE=ON
-          -DCMAKE_CXX_COMPILER=/usr/bin/mpicxx
-          -DCMAKE_C_COMPILER=/usr/bin/mpicc
-          -DCMAKE_Fortran_COMPILER=/usr/bin/mpif90
-          -DPYTHON_EXECUTABLE="${HOME}/miniconda/envs/helpme/bin/python"
+          -DCMAKE_CXX_COMPILER=mpicxx
+          -DCMAKE_C_COMPILER=mpicc
+          -DCMAKE_Fortran_COMPILER=mpif90
+          -DPYTHON_EXECUTABLE=`which python`
       - cd build
       - make -j 2
       script: ctest -VV
+      after_success:
+          # Creating report
+        - cd ${TRAVIS_BUILD_DIR}
+        - lcov --directory . --capture --output-file coverage.info # capture coverage info
+        - lcov --remove coverage.info '/usr/*' '*single_include*'  --output-file coverage.info # filter out system
+        - lcov --list coverage.info #debug info
+        # Uploading report to CodeCov
+        - bash <(curl -s https://codecov.io/bash) || echo "Codecov did not collect coverage reports"
