--- a/.travis.yml
+++ b/.travis.yml
@@ -109,6 +109,7 @@ jobs:
           - lcov
           - liblapack-dev
           - libfftw3-dev
+          - gfortran
           - mpi-default-bin
           - mpi-default-dev
       env:
