Add parallel bindings for C, with test

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -22,6 +22,14 @@ include_directories(${PROJECT_SOURCE_DIR}/single_include)
 include_directories(${FFTW_INCLUDES})
 link_libraries(${BLAS_LIBRARIES} ${LAPACK_LIBRARIES} ${FFTW_LIBRARIES})
 
+if(HAVE_MPI)
+    set_property(DIRECTORY APPEND
+                 PROPERTY LINKER_LANGUAGE "CXX" COMPILE_FLAGS "${MPI_CXX_COMPILE_FLAGS}"
+                 PROPERTY COMPILE_DEFINITIONS "HAVE_MPI=1")
+    include_directories("${MPI_CXX_INCLUDE_PATH}")
+    link_libraries(${MPI_CXX_LIBRARIES})
+endif()
+
 # Ensure headers are inlined every time a build is triggered
 add_custom_command(
     OUTPUT StandaloneHeader
@@ -57,18 +65,31 @@ add_test(NAME CXXWrapperStandaloneTest COMMAND RunCXXWrapperStandalone)
 
 # CXX MPI
 if(HAVE_MPI)
+    # CXX example
     add_executable (RunCXXMPIWrapper fullexample_parallel.cpp)
-    set_target_properties(RunCXXMPIWrapper PROPERTIES COMPILE_FLAGS "${MPI_CXX_COMPILE_FLAGS}")
-    target_compile_definitions(RunCXXMPIWrapper PRIVATE "-DHAVE_MPI=1")
-    target_include_directories(RunCXXMPIWrapper PRIVATE "${MPI_CXX_INCLUDE_PATH}")
-    target_link_libraries(RunCXXMPIWrapper ${MPI_CXX_LIBRARIES})
-    add_test(NAME CXXMPIWrapperTest
-             COMMAND ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 2 ${MPIEXEC_PREFLAGS} ./RunCXXMPIWrapper ${MPIEXEC_POSTFLAGS})
+    add_test(NAME CXXMPIWrapperTestX
+             COMMAND ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 2 ${MPIEXEC_PREFLAGS} ./RunCXXMPIWrapper 2 1 1 ${MPIEXEC_POSTFLAGS})
+    add_test(NAME CXXMPIWrapperTestY
+             COMMAND ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 2 ${MPIEXEC_PREFLAGS} ./RunCXXMPIWrapper 1 2 1 ${MPIEXEC_POSTFLAGS})
+    add_test(NAME CXXMPIWrapperTestZ
+             COMMAND ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 2 ${MPIEXEC_PREFLAGS} ./RunCXXMPIWrapper 1 1 2 ${MPIEXEC_POSTFLAGS})
+
+    # C example
+    add_executable (RunCMPIWrapper fullexample_parallel.c)
+    add_dependencies(RunCMPIWrapper helpmestatic)
+    target_link_libraries(RunCMPIWrapper ${helpmestatic_name})
+    set_target_properties(RunCMPIWrapper PROPERTIES LINKER_LANGUAGE CXX)
+    add_test(NAME CMPIWrapperTestX
+             COMMAND ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 2 ${MPIEXEC_PREFLAGS} ./RunCMPIWrapper 2 1 1 ${MPIEXEC_POSTFLAGS})
+    add_test(NAME CMPIWrapperTestY
+             COMMAND ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 2 ${MPIEXEC_PREFLAGS} ./RunCMPIWrapper 1 2 1 ${MPIEXEC_POSTFLAGS})
+    add_test(NAME CMPIWrapperTestZ
+             COMMAND ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 2 ${MPIEXEC_PREFLAGS} ./RunCMPIWrapper 1 1 2 ${MPIEXEC_POSTFLAGS})
 endif()
 
 # Fortran example
 if(Fortran_ENABLED)
-    add_executable(RunFortranWrapper ${PROJECT_SOURCE_DIR}/src/helpme.f90 fullexample.f90 )
+    add_executable(RunFortranWrapper ${PROJECT_SOURCE_DIR}/src/helpme.F90 fullexample.F90 )
     add_dependencies(RunFortranWrapper helpmestatic)
     if(CMAKE_CXX_COMPILER_ID MATCHES "AppleClang")
         set(cpplib c++)
