Fix MPI build flags again

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,8 +16,9 @@ set_target_properties(helpmestatic PROPERTIES PREFIX ""
                                               EXPORT_NAME helpme
                                               SUFFIX ".a")
 if(HAVE_MPI)
-    set_target_properties(helpmestatic PROPERTIES LINKER_LANGUAGE "CXX" COMPILE_FLAGS "${MPI_CXX_COMPILE_FLAGS}")
-    target_compile_definitions(helpmestatic PRIVATE "-DHAVE_MPI=1")
+    set_target_properties(helpmestatic PROPERTIES LINKER_LANGUAGE "CXX"
+                                       PROPERTIES COMPILE_FLAGS "${MPI_CXX_COMPILE_FLAGS}")
+    target_compile_definitions(helpmestatic PRIVATE "HAVE_MPI=1")
     target_include_directories(helpmestatic PRIVATE "${MPI_CXX_INCLUDE_PATH}")
     target_link_libraries(helpmestatic ${MPI_CXX_LIBRARIES})
 endif()
