--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,7 +17,7 @@ set_target_properties(helpmestatic PROPERTIES PREFIX ""
                                               SUFFIX ".a")
 if(HAVE_MPI)
     set_target_properties(helpmestatic PROPERTIES LINKER_LANGUAGE "CXX"
-                                       PROPERTIES COMPILE_FLAGS "${MPI_CXX_COMPILE_FLAGS}")
+                                       COMPILE_FLAGS "${MPI_CXX_COMPILE_FLAGS}")
     target_compile_definitions(helpmestatic PRIVATE "HAVE_MPI=1")
     target_include_directories(helpmestatic PRIVATE "${MPI_CXX_INCLUDE_PATH}")
     target_link_libraries(helpmestatic ${MPI_CXX_LIBRARIES})
