Try to make sure mpiexec can be found

--- a/.travis.yml
+++ b/.travis.yml
@@ -109,6 +109,7 @@ jobs:
           - libfftw3-dev
           - gfortran
           - libmpich-dev
+          - mpich
       env:
         - NAME='mpi'
         - CXX_COMPILER='mpicxx'
