Cleanup CMake for MPI builds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,6 +87,7 @@ find_package(MPI)
 if(MPI_CXX_FOUND)
     message(STATUS "${Cyan}Found MPI: ${MPI_INCLUDE_PATH}${ColourReset}")
     set(HAVE_MPI TRUE)
+    add_definitions("-DHAVE_MPI=1")
 else()
     message(STATUS "${Red}MPI not found${ColourReset}")
 endif()
