Add DHFR test for profiling

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -49,6 +49,13 @@ target_link_libraries(RunCWrapper ${helpmestatic_name})
 set_target_properties(RunCWrapper PROPERTIES LINKER_LANGUAGE CXX)
 add_test(NAME CWrapperTest COMMAND RunCWrapper)
 
+# CXX DHFR benchmark example
+add_executable (DHFRBenchmark dhfr_benchmark.cpp)
+configure_file(data/dhfr_charges.txt . COPYONLY)
+configure_file(data/dhfr_c6s.txt . COPYONLY)
+configure_file(data/dhfr_coords.txt . COPYONLY)
+target_compile_options(DHFRBenchmark  PRIVATE -g -pg)
+
 # CXX example
 add_executable (RunCXXWrapper fullexample.cpp)
 add_test(NAME CXXWrapperTest COMMAND RunCXXWrapper)
