Remove BLAS/Lapack dependencies

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,7 @@ set(sources_list
 
 include_directories(${FFTW_INCLUDES})
 add_library(helpmestatic STATIC ${sources_list})
+target_link_libraries(helpmestatic ${FFTW_LIBRARIES})
 
 if(Fortran_ENABLED AND CMAKE_Fortran_COMPILER_ID MATCHES Intel)
     #Enable call to for_rtl_init_() which is required if using the
