--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -18,7 +18,7 @@ add_custom_target(PythonInstall
 
 include_directories(../src)
 include_directories(${FFTW_INCLUDES})
-link_libraries(${BLAS_LIBRARIES} ${LAPACK_LIBRARIES} ${FFTW_LIBRARIES})
+link_libraries(${FFTW_LIBRARIES})
 pybind11_add_module(helpmelib pywrappers.cc)
 
 configure_file(setup.py . COPYONLY)
