Install files to correct location

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,7 +12,12 @@ if(Fortran_ENABLED AND CMAKE_Fortran_COMPILER_ID MATCHES Intel)
     target_compile_definitions(helpmestatic PRIVATE -DINTEL_Fortran_ENABLED)
 endif()
 
-set_target_properties(helpmestatic PROPERTIES PREFIX ""
-                                              OUTPUT_NAME helpme
-                                              EXPORT_NAME helpme
-                                              SUFFIX ".a")
+set_target_properties(helpmestatic PROPERTIES OUTPUT_NAME helpme EXPORT_NAME helpme)
+
+# Make sure headers are installed
+install(DIRECTORY . DESTINATION include FILES_MATCHING PATTERN "*.h")
+
+install(TARGETS helpmestatic
+        RUNTIME DESTINATION bin
+        LIBRARY DESTINATION lib
+        ARCHIVE DESTINATION lib)
