--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -56,12 +56,43 @@ add_custom_command(OUTPUT "${SPHINX_OUTPUT_DIR}/html"
                            "${SPHINX_OUTPUT_DIR}/html"
                    DEPENDS ${SPHINX_INPUT_SOURCES}
                    DEPENDS "${DOXYGEN_OUTPUT_DIR}/xml/index.xml")
-
-
 add_custom_target(SphinxHtml
                   DEPENDS "${SPHINX_OUTPUT_DIR}/html"
                   COMMENT "Building HTML documentation with Sphinx")
 
-# This will trigger all doxygen and sphinx builds
-add_custom_target(docs
-                  DEPENDS "${SPHINX_OUTPUT_DIR}/html")
+file(MAKE_DIRECTORY "${SPHINX_OUTPUT_DIR}/latex")
+add_custom_command(OUTPUT "${SPHINX_OUTPUT_DIR}/latex"
+                   COMMAND ${SPHINX_EXECUTABLE}
+                           -q -b latex
+                           -c "${SPHINX_OUTPUT_DIR}"
+                           "${SPHINX_INPUT_DIR}"
+                           "${SPHINX_OUTPUT_DIR}/latex"
+                   DEPENDS ${SPHINX_INPUT_SOURCES}
+                   DEPENDS "${DOXYGEN_OUTPUT_DIR}/xml/index.xml")
+add_custom_target(SphinxLatex
+                  DEPENDS "${SPHINX_OUTPUT_DIR}/latex"
+                  COMMENT "Building LaTeX documentation with Sphinx")
+
+# Make sure headers are installed
+install(DIRECTORY "${SPHINX_OUTPUT_DIR}/html" DESTINATION doc)
+install(DIRECTORY "${SPHINX_OUTPUT_DIR}/latex" DESTINATION doc)
+
+
+if(LATEX_FOUND)
+    add_custom_command(OUTPUT "${SPHINX_OUTPUT_DIR}/latex/helPME.pdf"
+                       COMMAND make
+                       WORKING_DIRECTORY "${SPHINX_OUTPUT_DIR}/latex"
+                       DEPENDS ${SPHINX_OUTPUT_DIR}/latex)
+    add_custom_target(SphinxPdf
+                      DEPENDS "${SPHINX_OUTPUT_DIR}/latex"
+                      COMMENT "Building PDF documentation with Sphinx")
+    install(FILES "${SPHINX_OUTPUT_DIR}/latex/helPME.pdf" DESTINATION doc)
+    add_custom_target(docs
+                      DEPENDS "${SPHINX_OUTPUT_DIR}/latex"
+                      DEPENDS "${SPHINX_OUTPUT_DIR}/latex/helPME.pdf"
+                      DEPENDS "${SPHINX_OUTPUT_DIR}/html")
+else()
+    add_custom_target(docs
+                      DEPENDS "${SPHINX_OUTPUT_DIR}/latex"
+                      DEPENDS "${SPHINX_OUTPUT_DIR}/html")
+endif()
