--- a/docs/sphinx/conf.py.in
+++ b/docs/sphinx/conf.py.in
@@ -31,7 +31,7 @@
 # Add any Sphinx extension module names here, as strings. They can be
 # extensions coming with Sphinx (named 'sphinx.ext.*') or your custom
 # ones.
-extensions = ['breathe', 'sphinx.ext.mathjax']
+extensions = ['breathe', 'sphinx.ext.mathjax', 'sphinx.ext.extlinks']
 
 breathe_projects = { "helPME": "@CMAKE_BINARY_DIR@/docs/doxygen/xml/" }
 breathe_default_project = 'helPME'
@@ -192,4 +192,8 @@ texinfo_documents = [
 ]
 
 
+extlinks = {
+             'repo':      ('https://github.com/andysim/helpme/tree/master/%s', ''),
+             'testcase':  ('https://github.com/andysim/helpme/tree/master/test/%s', 'sample ')
+           }
 
