--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,6 +73,15 @@ set(CMAKE_Fortran_FLAGS_DEBUG "${CMAKE_Fortran_FLAGS_DEBUG} -O0")
 
 # FFTW
 find_package(FFTW REQUIRED)
+if(HAVE_FFTWF)
+    add_definitions(-DHAVE_FFTWF=1)
+endif()
+if(HAVE_FFTWD)
+    add_definitions(-DHAVE_FFTWD=1)
+endif()
+if(HAVE_FFTWL)
+    add_definitions(-DHAVE_FFTWL=1)
+endif()
 
 # OpenMP
 if(ENABLE_OPENMP)
@@ -130,6 +139,7 @@ set(EXTERNAL_LIBRARIES ${FFTW_LIBRARIES} ${cpplib})
 # Documentation
 find_package(Doxygen)
 find_package(Sphinx)
+find_package(Latex)
 if(DOXYGEN_EXECUTABLE)
     if(SPHINX_EXECUTABLE)
         add_subdirectory(docs)
